--- a/templates/register.html
+++ b/templates/register.html
@@ -13,7 +13,7 @@
 	{% for field in form %}
 
 		<tr>
-				<td>	{{field.name}} </td> 
+				<td>	{{field.label}} </td> 
 				<td>	 :			 </td> 
 				<td> 	{{field}}	 </td>
 		</tr>
