Added /Logout , Some minor changes to /login and /register , Logged in users can't see login and register pages

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,9 @@
 		<li>
 			<b> Login : </b> <a href="/account/login" > Page </a>
 		</li>
+		<li>
+			<b> Logout : </b> <a href="account/logout"> Page </a>
+		</li>
 	</ul>
 
 	{% endblock  %}
