Added Challenge and Contest.   /challenge/create

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,9 @@
 		<li>
 			<b> Logout : </b> <a href="account/logout"> Page </a>
 		</li>
+		<li>
+			<b> Challenge/create </b> <a href="challenge/create"> Page </a>
+		</li>
 	</ul>
 
 	{% endblock  %}
