--- a/templates/logout.html
+++ b/templates/logout.html
@@ -8,7 +8,7 @@
 {% block content %}
 	
 	<p>
-		<strong>You are logged out.</strong>
+		<strong>You are logged out. <a href="/"> Click here to return to home. </a> </strong>
 	</p>
 
 	
