Added Notification model , generic view and creation of notifications

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,9 @@
 	<li>
 		<a href="/challenge/all"> View Challenges </a>
 	</li>
+	<li>
+		<a href="/challenge/notifications"> Notifications  </a>
+	</li>
 </ul>
 
 </div>
