--- a/templates/registered.html
+++ b/templates/registered.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 	
-	<h2> The Registeration for {{user.username}} @ {{user.email}} was successfull. </h2>
+	<h2> The Registeration for {{newuser.username}} @ {{newuser.email}} was successfull. </h2>
 	<p>
 		You can now login with your account. <a href="/"> Here </a>
 	</p>
